--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ FLASK_ENV=development
 export SECRET_KEY=supersecretkey
 export JWT_SECRET_KEY=jwtsecretkey
 
-export DATABASE_URL=postgresql://space_haven_user:6GdTu6piGlMsnTMqW0tjhFzLyTiHai0q@dpg-cudnemtumphs73cqedjg-a.oregon-postgres.render.com/space_haven
+export DATABASE_URL=postgresql://postgres.jnprlgdommvwvtcoyfsj:kipkoech2024@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
