--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ FLASK_ENV=development
 export SECRET_KEY=supersecretkey
 export JWT_SECRET_KEY=jwtsecretkey
 
-export DATABASE_URL=postgresql://postgres.jnprlgdommvwvtcoyfsj:kipkoech2024@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
+export DATABASE_URL=postgresql://postgres.jnprlgdommvwvtcoyfsj:kipkoech2024@aws-0-eu-central-1.pooler.supabase.com:5432/postgres?sslmode=verify-full
